# clcbs-simple

./: .gitignore  README.md
clcbs_driving/: CMakeLists.txt  package.xml
clcbs_driving/config/: map.yaml  sch.yaml
clcbs_driving/include/: Constants.h  GlobalPlanner.h  LocalPlanner.h  io.hpp
clcbs_driving/launch/: tracking.launch
clcbs_driving/script/: diff_drive.py
clcbs_driving/src/: GlobalPlanner.cpp  LocalPlanner.cpp  main.cpp
clcbs_gazebo/: CMakeLists.txt  package.xml
clcbs_gazebo/launch/: clcbs_config.launch  clcbs_world.launch  clcbs_world.rviz  robot_spawner.launch
clcbs_gazebo/models/agent/urdf/: agent_sim.gazebo  agent_sim.xacro
clcbs_gazebo/models/heightmap/: model.sdf
clcbs_gazebo/scripts/: gazebo2tf.py
clcbs_gazebo/worlds/: clcbs.world
clcbs_setup/: package.xml
clcbs_setup/scripts/: setup.sh  setup_gazebo.py  setup_heightmap.py  setup_launch.py  setup_mapserver.py
