<?xml version="1.0"?>
<package format="2">
    <name>clcbs_gazebo</name>
    <version>0.0.0</version>
    <description>The clcbs_gazebo package to spawn gazebo world and robot models.</description>
    <maintainer email="jewelry.zju@gmail.com">Chengrui Zhu</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>ros_control</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_pkgs</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>gazebo_msgs</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>velocity_controllers</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>map_server</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
</package>