<?xml version="1.0"?>
<package format="2">
  <name>clcbs_setup</name>
  <version>0.0.0</version>
  <description>The clcbs_setup package to setup clcbs world configs.</description>
  <maintainer email="jewelry.zju@gmail.com">Chengrui Zhu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
